--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -11,4 +11,6 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag sirishkumar/client:$(date +%s)
+      run: docker build . --file Dockerfile --tag sirishkumar/client
+    - name: Run tests
+      run: docker run sirishkumar/client
