--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -13,4 +13,4 @@ jobs:
     - name: Build the Docker image
       run: docker build . --file Dockerfile.dev --tag sirishkumar/client
     - name: Run tests
-      run: docker run -e CI=true sirishkumar/client npm run test
+      run: docker run -e CI=true sirishkumar/client npm run test --  --coverage
