--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
     - docker build -t sirishkumar/docker.react -f Dockerfile.dev .
 
 script:
-    - docker run -e CI=true sirishkumar/docker.react npm run test
+    - docker run -e CI=true sirishkumar/docker.react npm run test -- --coverage
